# pmm-messaging

./: .gitignore  README.md  pyproject.toml
data/: sample_data.csv
pmm_messaging/: agent.py  app.py  llm.py  prompts.py  schemas.py
